src/test/test-models/good/keywords-reject.stan
parameters {
  real rejection;
}
model {
  rejection ~ normal(0,1);
}
